docs: Stage 2-e result — eight of 23, and the beachhead phase is over
Records what the batch proved: jvm exercised the parent POM's --add-exports policy for
the first time (carried since 2-a on reasoning alone) and compiled cleanly; Maven
reproduces zip directory entries exactly; and prebuildjava's topo-sort is already the
correct migration order, with gui 12th rather than next.

Also records the gate bug this stage exposed, because it is the kind that recurs: a
re-baseline via capture.sh froze a maven_jars snapshot into a file describing the
autotools build, and the verification missed it because a brand-new section never
entered the key comparison. With a frozen Maven snapshot there, every future migration
would make the baseline stale and re-baselining would become routine — which is how a
gate stops being a gate.